--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -26,6 +26,5 @@ backend steem_nodes
    # option httpchk GET /health_check_path
     server primary_server api.steememory.com:443 check ssl verify none
     server backup_server1 api.upvu.org:443 check ssl verify none
-    server backup_server2 api.steemit.com:443 check ssl verify none
-    server backup_server3 api.justyy.com:443 check ssl verify none
+    server backup_server3 api.worldofxpilar.com:443 check ssl verify none
 
